--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,186 @@
-<ion-app>
-  <ion-split-pane contentId="main-content">
-    <ion-menu contentId="main-content" type="overlay">
-      <ion-content>
-        <ion-list id="inbox-list">
-          <ion-list-header>Inbox</ion-list-header>
-          <ion-note>hi@ionicframework.com</ion-note>
 
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
-            <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
-              <ion-icon slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
-              <ion-label>{{ p.title }}</ion-label>
-            </ion-item>
-          </ion-menu-toggle>
-        </ion-list>
-
-        <ion-list id="labels-list">
-          <ion-list-header>Labels</ion-list-header>
-
-          <ion-item *ngFor="let label of labels" lines="none">
-            <ion-icon slot="start" ios="bookmark-outline" md="bookmark-sharp"></ion-icon>
-            <ion-label>{{ label }}</ion-label>
-          </ion-item>
-        </ion-list>
-      </ion-content>
-    </ion-menu>
-    <ion-router-outlet id="main-content"></ion-router-outlet>
-  </ion-split-pane>
-</ion-app>
+<ion-content scroll-y="true">
+  <virtual-scroll-element class="ion-content-scroll-host">
+    <!-- Your virtual scroll content -->
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          ion-col
+        </ion-col>
+        <ion-col>
+          ion-col
+        </ion-col>
+        <ion-col>
+          ion-col
+        </ion-col>
+        <ion-col>
+          ion-col
+        </ion-col>
+      </ion-row>
+    
+      <ion-row>
+        <ion-col size="6">
+          ion-col [size="6"]
+        </ion-col>
+        <ion-col>
+          ion-col
+        </ion-col>
+        <ion-col>
+          ion-col
+        </ion-col>
+      </ion-row>
+    
+      <ion-row>
+        <ion-col size="3">
+          ion-col [size="3"]
+        </ion-col>
+        <ion-col>
+          ion-col
+        </ion-col>
+        <ion-col size="3">
+          ion-col [size="3"]
+        </ion-col>
+      </ion-row>
+    
+      <ion-row>
+        <ion-col size="3">
+          ion-col [size="3"]
+        </ion-col>
+        <ion-col size="3" offset="3">
+          ion-col [size="3"] [offset="3"]
+        </ion-col>
+      </ion-row>
+    
+      <ion-row>
+        <ion-col>
+          ion-col
+        </ion-col>
+        <ion-col>
+          ion-col
+          <br>#
+        </ion-col>
+        <ion-col>
+          ion-col
+          <br>#
+          <br>#
+        </ion-col>
+        <ion-col>
+          ion-col
+          <br>#
+          <br>#
+          <br>#
+        </ion-col>
+      </ion-row>
+    
+      <ion-row>
+        <ion-col class="ion-align-self-start">
+          ion-col [start]
+        </ion-col>
+        <ion-col class="ion-align-self-center">
+          ion-col [center]
+        </ion-col>
+        <ion-col class="ion-align-self-end">
+          ion-col [end]
+        </ion-col>
+        <ion-col>
+          ion-col
+          <br>#
+          <br>#
+        </ion-col>
+      </ion-row>
+    
+      <ion-row class="ion-align-items-start">
+        <ion-col>
+          [start] ion-col
+        </ion-col>
+        <ion-col>
+          [start] ion-col
+        </ion-col>
+        <ion-col class="ion-align-self-end">
+          [start] ion-col [end]
+        </ion-col>
+        <ion-col>
+          ion-col
+          <br>#
+          <br>#
+        </ion-col>
+      </ion-row>
+    
+      <ion-row class="ion-align-items-center">
+        <ion-col>
+          [center] ion-col
+        </ion-col>
+        <ion-col>
+          [center] ion-col
+        </ion-col>
+        <ion-col>
+          [center] ion-col
+        </ion-col>
+        <ion-col>
+          ion-col
+          <br>#
+          <br>#
+        </ion-col>
+      </ion-row>
+    
+      <ion-row class="ion-align-items-end">
+        <ion-col>
+          [end] ion-col
+        </ion-col>
+        <ion-col class="ion-align-self-start">
+          [end] ion-col [start]
+        </ion-col>
+        <ion-col>
+          [end] ion-col
+        </ion-col>
+        <ion-col>
+          ion-col
+          <br>#
+          <br>#
+        </ion-col>
+      </ion-row>
+    
+      <ion-row>
+        <ion-col size="12" size-sm>
+          ion-col [size="12"] [size-sm]
+        </ion-col>
+        <ion-col size="12" size-sm>
+          ion-col [size="12"] [size-sm]
+        </ion-col>
+        <ion-col size="12" size-sm>
+          ion-col [size="12"] [size-sm]
+        </ion-col>
+        <ion-col size="12" size-sm>
+          ion-col [size="12"] [size-sm]
+        </ion-col>
+      </ion-row>
+    
+      <ion-row>
+        <ion-col size="12" size-md>
+          ion-col [size="12"] [size-md]
+        </ion-col>
+        <ion-col size="12" size-md>
+          ion-col [size="12"] [size-md]
+        </ion-col>
+        <ion-col size="12" size-md>
+          ion-col [size="12"] [size-md]
+        </ion-col>
+        <ion-col size="12" size-md>
+          ion-col [size="12"] [size-md]
+        </ion-col>
+      </ion-row>
+    
+      <ion-row>
+        <ion-col size="6" size-lg offset="3">
+          ion-col [size="6"] [size-lg] [offset="3"]
+        </ion-col>
+        <ion-col size="3" size-lg>
+          ion-col [size="3"] [size-lg]
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </virtual-scroll-element>
+  <ion-infinite-scroll>
+    <ion-infinite-scroll-content></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
+</ion-content>
