--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,3 +1,33 @@
-<p>
-  login works!
-</p>
+<ion-content>
+  <form [formGroup]="loginForm">
+    <ion-item>
+      <ion-label position="floating">E-Mail</ion-label>
+      <ion-input required formControlName="loginForm.email" type="text"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Password</ion-label>
+      <ion-input required formControlName="loginForm.password" type="password"></ion-input>
+    </ion-item>
+    <ion-button shape="round" block color="primary" (click)="onLogin()" >
+      Login
+    </ion-button>
+  </form>
+  <!-- <form [formGroup]="loginForm">
+      <div class="col">
+        <div class="row">
+          <label >Email</label>
+          <div class="row">
+            <ion-input type="email" formControlName="username"></ion-input>
+          </div>
+        </div>
+        <div class="row">
+          <label for="">Password</label>
+          <div class="row">
+            <ion-input type="password" formControlName="password"></ion-input>
+          </div>
+        </div>
+        <div class="row">
+          <ion-button shape="round" color="primary" fill="outline" [disabled]="!loginForm.valid" (click)="onLogin()">Login</ion-button></div>
+      </div>
+    </form> -->
+  </ion-content>
