--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-
-<ion-router-outlet></ion-router-outlet>
+<ion-app>
+    <ion-content>
+        <ion-router-outlet></ion-router-outlet>
+        <ion-button routerLink="/login">Login</ion-button>
+        <ion-button routerLink="/register">Register</ion-button>
+    </ion-content>
+</ion-app>
