Routing basico añadido, falta corregir errores

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -11,6 +11,7 @@
     <ion-button shape="round" block color="primary" (click)="onLogin()" >
       Login
     </ion-button>
+    <ion-button shape="round" block color="primary" routerLink="/register">Register</ion-button>
   </form>
   <!-- <form [formGroup]="loginForm">
       <div class="col">
