--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,18 @@
 <ion-app>
     <ion-content>
         <ion-router-outlet></ion-router-outlet>
-        <ion-button routerLink="/login">Login</ion-button>
-        <ion-button routerLink="/register">Register</ion-button>
+        <ion-item>
+            <ion-button shape="round" block color="primary" routerLink="/login">Login</ion-button>
+        </ion-item>
+        <ion-item>
+            <ion-row>
+                <ion-col size="12">
+                    <ion-label>No estás registrado? Regístrate aquí</ion-label>
+                </ion-col>
+                <ion-col size="12">
+                    <ion-button shape="round" block color="primary" routerLink="/register">Register</ion-button>
+                </ion-col>
+            </ion-row>
+        </ion-item>
     </ion-content>
 </ion-app>
