--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -15,6 +15,15 @@
     <ion-button shape="round" block color="primary" [disabled]="!registerForm.valid" (click)="onRegister()">
       Registrarme
     </ion-button>
+    <ion-item>
+      <ion-row>
+        <ion-col size="12">
+            <ion-label>Ya tienes cuenta? Inicia sesión aquí</ion-label>
+        </ion-col>
+        <ion-col size="12">
+            <ion-button shape="round" block color="primary" routerLink="/login">Login</ion-button>
+        </ion-col>
+    </ion-row>    </ion-item>
   </form>
   <!-- <form [formGroup]="registerForm">
     <div>
