--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -18,12 +18,13 @@
     <ion-item>
       <ion-row>
         <ion-col size="12">
-            <ion-label>Ya tienes cuenta? Inicia sesión aquí</ion-label>
+            <ion-label>No querías registrarte? Inicia sesión aquí</ion-label>
         </ion-col>
         <ion-col size="12">
             <ion-button shape="round" block color="primary" routerLink="/login">Login</ion-button>
         </ion-col>
-    </ion-row>    </ion-item>
+      </ion-row>    
+    </ion-item>
   </form>
   <!-- <form [formGroup]="registerForm">
     <div>
