--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <ion-app>
     <ion-content>
         <ion-router-outlet></ion-router-outlet>
-        <ion-item>
+        <!-- <ion-item>
             <ion-button shape="round" block color="primary" routerLink="/login">Login</ion-button>
         </ion-item>
         <ion-item>
@@ -13,6 +13,6 @@
                     <ion-button shape="round" block color="primary" routerLink="/register">Register</ion-button>
                 </ion-col>
             </ion-row>
-        </ion-item>
+        </ion-item> -->
     </ion-content>
 </ion-app>
