--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,13 +1,15 @@
-<ion-item>
-  <ion-button shape="round" block color="primary" routerLink="/login">Login</ion-button>
-</ion-item>
-<ion-item>
-  <ion-row>
-      <ion-col size="12">
-          <ion-label>No estás registrado? Regístrate aquí</ion-label>
-      </ion-col>
-      <ion-col size="12">
-          <ion-button shape="round" block color="primary" routerLink="/register">Register</ion-button>
-      </ion-col>
-  </ion-row>
-</ion-item>
+<ion-content>
+        <ion-item>
+            <ion-button shape="round" block color="primary" routerLink="/login">Login</ion-button>
+          </ion-item>
+          <ion-item>
+            <ion-row>
+                <ion-col size="12">
+                    <ion-label>No estás registrado? Regístrate aquí</ion-label>
+                </ion-col>
+                <ion-col size="12">
+                    <ion-button shape="round" block color="primary" routerLink="/register">Register</ion-button>
+                </ion-col>
+            </ion-row>
+          </ion-item>
+    </ion-content> 
