--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,4 +1,8 @@
-<ion-content>
+<ion-header>
+  <ion-toolbar>
+    <ion-title class="ion-text-center">Crear una cuenta</ion-title>
+  </ion-toolbar>
+</ion-header><ion-content>
   <form [formGroup]="registerForm">
     <ion-item>
       <ion-label position="floating">Email</ion-label>
@@ -11,16 +15,16 @@
     <ion-button shape="round" block color="primary" [disabled]="!registerForm.valid" (click)="onRegister()">
       Registrarme
     </ion-button>
-    <ion-item>
+    <!-- <ion-item> -->
       <ion-row>
         <ion-col size="12">
             <ion-label>No querías registrarte? Inicia sesión aquí</ion-label>
         </ion-col>
         <ion-col size="12">
-            <ion-button shape="round" block color="primary" routerLink="/login">Login</ion-button>
+            <ion-button shape="round" block color="primary" routerLink="/login">Iniciar sesión</ion-button>
         </ion-col>
       </ion-row>    
-    </ion-item>
+    <!-- </ion-item> -->
   </form>
   <!-- <form [formGroup]="registerForm">
     <div>
