--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -24,7 +24,7 @@
     <ion-toolbar>
       <ion-row>
         <ion-input type="text" placeholder="Escribe aquí" minlength="1" id="inputMessage"></ion-input>
-        <ion-button (click)="onSendMessage()">
+        <ion-button (click)="onSendMessage()" class="enviar">
           <ion-icon slot="icon-only" name="add"></ion-icon>
         </ion-button>
       </ion-row>
