--- a/src/app/pages/chat/chat.component.scss
+++ b/src/app/pages/chat/chat.component.scss
@@ -9,70 +9,6 @@
     filter: drop-shadow(0px 0px 2px rgba(54, 115, 207, 0.5));
 }
 
-
-.messages{
-    margin-bottom: 62px;
-    bottom: 0px;
-}
-.otherMessages{
-    margin: 0;
-}
-.myMessages{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    margin: 0;
-}
-.message{
-    background-color: #3673cf;
-    border-radius: 5px;
-    margin: 5px;
-    padding: 6px;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
-    color: white;
-    width: fit-content;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 500;
-    transition: 0.3s;
-}
-.myMessage{
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    border-radius: 5px;
-    margin: 5px;
-    padding: 6px;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
-    color: #3d3d3d;
-    width: fit-content;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 500;
-    transition: 0.3s;
-}
-.bold{
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 800;
-    color:#15e289;
-    text-shadow: 0px 0px 3px #2424244d;
-}
-.meBold{
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 800;
-    color:#3673cf;
-    text-shadow: 0px 0px 3px #2424244d;
-}
-.data{
-    color: rgb(180, 180, 180);
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 500;
-    font-size: 10px;
-    text-align: right;
-}
-
-ion-infinite-scroll-content{
-    position: relative;
-    margin-bottom: 30px;
-}
 .loadingSpinner{
     --color: #3673cf;
     size: 10px;
@@ -101,18 +37,6 @@ ion-infinite-scroll-content{
     user-select: none; 
 }
 
-.newMessage{
-    clear: both;
-    position: fixed;
-    width: 100%;
-    z-index: 2;
-    bottom: 0;
-    display: flex;
-    background-color: #3673cf;
-    border-top-left-radius: 7px;
-    border-top-right-radius: 7px;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
-}
 ion-input{
     background-color: rgba(0, 0, 0, 0.2);
     margin: 10px;
@@ -125,6 +49,11 @@ ion-button.enviar{
     border-radius: 5px;
     height: auto;
     transition: 0.3s;
+}
+
+div.msg{
+    padding-left: 5px;
+    padding-top: 5px
 }
 
 
