--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -12,10 +12,10 @@
       <ion-label position="floating">Contraseña</ion-label>
       <ion-input required formControlName="password" type="password"></ion-input>
     </ion-item>
-    <ion-item>
+    <!-- <ion-item>
       <ion-label position="floating">Nombre de usuario</ion-label>
       <ion-input required formControlName="displayName" type="text"></ion-input>
-    </ion-item>
+    </ion-item> -->
     <ion-button shape="round" block color="primary" [disabled]="!registerForm.valid" (click)="onRegister()">
       Registrarme
     </ion-button>
