--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -9,7 +9,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-content" [scrollEvents]="true" onload="scrollToBottom()">
+<ion-content class="ion-content" [scrollEvents]="true">
   
   <!-- <div #messagesContent class="messages"></div>
   <div class="scroll" (click)="scrollToBottom()" *ngIf="!compScroll()"></div>
@@ -22,12 +22,6 @@
   <div *ngFor="let mesage of messages" class="msg">
     <b>{{mesage.user}}:</b> {{mesage.text}}
   </div>
-  <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData()">
-    <ion-infinite-scroll-content
-      loadingSpinner="bubbles"
-      loadingText="Loading more data...">
-    </ion-infinite-scroll-content>
-  </ion-infinite-scroll>
 </ion-content>
   
   <ion-footer>
