--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,15 @@
 <ion-app>
     <ion-router-outlet></ion-router-outlet>
-    <!-- <ion-content>
-        <ion-item>
-            <ion-button shape="round" block color="primary" routerLink="/login">Login</ion-button>
-          </ion-item>
-          <ion-item>
-            <ion-row>
-                <ion-col size="12">
-                    <ion-label>No estás registrado? Regístrate aquí</ion-label>
-                </ion-col>
-                <ion-col size="12">
-                    <ion-button shape="round" block color="primary" routerLink="/register">Register</ion-button>
-                </ion-col>
-            </ion-row>
-          </ion-item>
-    </ion-content> -->
+    
+        <!-- <ion-content>
+            <div class="bot">
+                    <ion-button shape="round" block color="primary" routerLink="/login">Iniciar sesión</ion-button>
+            </div>
+            <hr>
+            <ion-label class="bot">No estás registrado? Regístrate aquí</ion-label>
+            <hr>
+            <div class="bot">
+                <ion-button shape="round" block color="primary" routerLink="/register">Registrarse</ion-button>
+              </div>
+        </ion-content> -->
 </ion-app>
