--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -16,18 +16,18 @@
       <ion-label position="floating">Nombre de usuario</ion-label>
       <ion-input required formControlName="displayName" type="text"></ion-input>
     </ion-item> -->
-    <ion-button shape="round" block color="primary" [disabled]="!registerForm.valid" (click)="onRegister()">
-      Registrarme
-    </ion-button>
+    <div class="bot">    
+      <ion-button shape="round" block color="primary" [disabled]="!registerForm.valid" (click)="onRegister()">Registrarme</ion-button>
+    </div>
     <!-- <ion-item> -->
       <ion-row>
-        <ion-col size="12">
-            <ion-label>No querías registrarte? Inicia sesión aquí</ion-label>
-        </ion-col>
-        <ion-col size="12">
-            <ion-button shape="round" block color="primary" routerLink="/login">Iniciar sesión</ion-button>
-        </ion-col>
+            <ion-label class="bot">No querías registrarte? Inicia sesión aquí</ion-label>
       </ion-row>    
+      <div class="bot">
+        <ion-row>
+          <ion-button shape="round" block color="primary" routerLink="/login">Iniciar sesión</ion-button>
+        </ion-row>
+      </div>
     <!-- </ion-item> -->
   </form>
   <!-- <form [formGroup]="registerForm">
