--- a/src/app/pages/chat/chat.component.scss
+++ b/src/app/pages/chat/chat.component.scss
@@ -51,10 +51,10 @@ ion-button.enviar{
     transition: 0.3s;
 }
 
-div.msg{
-    padding-left: 5px;
-    padding-top: 5px
-}
+// ion-item.msg{
+//     padding-left: 5px;
+//     padding-top: 5px
+// }
 
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,500;1,800&display=swap');
