--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -11,3 +11,7 @@ div.bot{
     font-size: large;
     min-height: 5%;
   }
+  ion-content.block{
+    padding-top: 200% !important;
+    margin-top: 20%;
+  }
