--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content class="ion-padding">
     <div class="bot">
             <ion-button shape="round" block color="primary" routerLink="/login">Iniciar sesión</ion-button>
     </div>
