Error localizacion corregido

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,11 +1,11 @@
 <ion-content class="ion-padding">
-    <div class="bot">
-            <ion-button shape="round" block color="primary" routerLink="/login">Iniciar sesión</ion-button>
+    <div class=>
+            <ion-button class="but" shape="round" block color="primary" routerLink="/login">Iniciar sesión</ion-button>
     </div>
     <hr>
-    <ion-label class="bot">No estás registrado? Regístrate aquí</ion-label>
+      <ion-label class="bot">No estás registrado? Regístrate aquí</ion-label>
     <hr>
-    <div class="bot">
-        <ion-button shape="round" block color="primary" routerLink="/register">Registrarse</ion-button>
+    <div class="">
+        <ion-button class="but" shape="round" block color="primary" routerLink="/register">Registrarse</ion-button>
       </div>
 </ion-content>
