--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -3,15 +3,14 @@ div.bot{
     padding-top: 5px;
   }
   ion-label.bot{
-    padding: 15px;
+    padding: 4.17%;
     padding-inline-start: 40%;
+    text-align: center;
+    -ms-text-size-adjust: auto;
   }
   
-  ion-button{
+  ion-button.but{
     font-size: large;
     min-height: 5%;
-  }
-  ion-content.block{
-    padding-top: 200% !important;
-    margin-top: 20%;
+    padding-left: 27%;
   }
