--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <ion-content class="ion-padding">
     <div class="bot">
             <ion-button class="but" shape="round" block color="primary" routerLink="/login">Iniciar sesión</ion-button>
@@ -5,7 +6,7 @@
     <hr>
       <ion-label class="bot">No estás registrado? Regístrate aquí</ion-label>
     <hr>
-    <div class="bot">
+    <div>
         <ion-button class="but" shape="round" block color="primary" routerLink="/register">Registrarse</ion-button>
       </div>
 </ion-content>
