--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,15 +1,35 @@
+@media only screen and (min-width: 413) {
+    
 div.bot{
-    padding-inline-start: 43%;
-    padding-top: 5px;
-  }
-  ion-label.bot{
-    padding: 4.17%;
-    padding-inline-start: 40%;
-    text-align: center;
-    -ms-text-size-adjust: auto;
-  }
+  padding-inline-start: 43%;
+  padding-top: 5px;
+}
+ion-label.bot{
+  padding: 4.17%;
+  padding-inline-start: 40%;
+  text-align: center;
+  -ms-text-size-adjust: auto;
+}
+
+ion-button.but{
+  font-size: large;
+  min-height: 5%;
+}
+}
+
+div.bot{
+  padding-top: 5%;
+}
+ion-label.bot{
+   padding: 4.17%;
+   padding-inline-start: 17%;
+   text-align: center;
+   font-size: 90%;
+}
+ion-button.but{
+   font-size: large;
+   min-height: 5%;
+   min-width: 80%;
+   padding-inline-start: 23%;
+    }
   
-  ion-button.but{
-    font-size: large;
-    min-height: 5%;
-  }
