--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,3 +1,4 @@
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <ion-header>
   <ion-toolbar>
     <ion-title class="ion-text-center">Inicio de sesión</ion-title>
@@ -15,15 +16,15 @@
     </ion-item>
     <div class="bot">
       <ion-row >
-        <ion-button shape="round" block color="primary" (click)="onLogin()" [disabled]="!loginForm.valid">Iniciar sesión</ion-button>
+        <ion-button class="but" shape="round" block color="primary" (click)="onLogin()" [disabled]="!loginForm.valid">Iniciar sesión</ion-button>
       </ion-row>
     </div>
       <ion-row>
         <ion-label class="bot">No tienes cuenta? Regístrate aquí</ion-label>
       </ion-row>
-    <div class="bot">
+    <div>
       <ion-row>
-        <ion-button shape="round" block color="primary" routerLink="/register">Registrarme</ion-button>
+        <ion-button class="but" shape="round" block color="primary" routerLink="/register">Registrarme</ion-button>
       </ion-row>
     </div>
   </form>
