--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <ion-content class="ion-padding">
+  <div class="flex">
     <div class="bot">
             <ion-button class="but" shape="round" block color="primary" routerLink="/login">Iniciar sesión</ion-button>
     </div>
@@ -8,5 +9,6 @@
     <hr>
     <div>
         <ion-button class="but" shape="round" block color="primary" routerLink="/register">Registrarse</ion-button>
-      </div>
+    </div>
+  </div>
 </ion-content>
