--- a/src/app/pages/register/register.component.scss
+++ b/src/app/pages/register/register.component.scss
@@ -1,14 +1,52 @@
-ion-label{
-    padding: 5px;
-}
-div.bot{
-    padding-inline-start: 43%;
-    padding-top: 5px;
-}
-ion-label.bot{
-    padding: 10px;
-    padding-inline-start: 38.5%;
-}
-ion-button{
-    min-width: 25%;
+// @media only screen and (min-width: 413) {
+//     ion-label{
+//     padding: 5px;
+//     }
+//     div.bot{
+//         padding-inline-start: 43%;
+//         padding-top: 5px;
+//     }
+//     ion-label.bot{
+//         padding: 10px;
+//         padding-inline-start: 43.5%;
+//     }
+//     ion-button{
+//         min-width: 25%;
+//     }
+// }
+// @media only screen and (max-width: 413) {
+//     ion-label{
+//         padding: 5px;
+//     }
+//     div.bot{
+//         padding-top: 5%;
+//     }
+//     ion-label.bot{
+//         padding: 4.17%;
+//         padding-inline-start: 15%;
+//         text-align: center;
+//         font-size: 90%;
+//     }
+//     ion-button.but{
+//         min-height: 5%;
+//         min-width: 80%;
+//         padding-inline-start: 23%;
+//     }
+// }
+
+.flex{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    ion-button{
+        width: 10rem;
+    }
+    div.bot{
+        padding-top: 5%;
+    }
+    ion-label.bot{
+        padding-top: 4.17%;
+        padding-bottom: 4.17%;
+    }
 }
