--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -40,7 +40,7 @@
   align-items: center;
   align-content: center;
   ion-button{
-      width: 10rem;
+      width: 100%;
   }
-  padding-top: 20%;
+  padding-top: 40%;
 }
