--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -18,15 +18,15 @@
     </ion-item> -->
     <div class="flex">
       <div class="bot">    
-        <ion-button class="but" shape="round" block color="primary" [disabled]="!registerForm.valid" (click)="onRegister()">Registrarme</ion-button>
+        <ion-button class="but1" fill="solid" [disabled]="!registerForm.valid" (click)="onRegister()">Registrarme</ion-button>
       </div>
       <!-- <ion-item> -->
         <ion-row>
-              <ion-label class="bot">No querías registrarte? Inicia sesión aquí</ion-label>
+              <ion-label class="lab">No querías registrarte? Inicia sesión aquí</ion-label>
         </ion-row>    
         <div>
           <ion-row>
-            <ion-button class="but" shape="round" block color="primary" routerLink="/login">Iniciar sesión</ion-button>
+            <ion-button class="but2" fill="outline" routerLink="/login">Iniciar sesión</ion-button>
           </ion-row>
         </div></div>
     <!-- </ion-item> -->
