--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -41,6 +41,8 @@
   align-content: center;
   ion-button{
       width: 100%;
+      --background: #3689ff;
+      --box-shadow: 0 2px 6px 0 rgb(0, 0, 0, 0.25);
   }
   padding-top: 20%;
 }
