--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -16,15 +16,15 @@
     <div class="flex">
       <div class="bot">
         <ion-row >
-          <ion-button class="but" shape="round" block color="primary" (click)="onLogin()" [disabled]="!loginForm.valid">Iniciar sesión</ion-button>
+          <ion-button class="but1" fill="solid" (click)="onLogin()" [disabled]="!loginForm.valid">Iniciar sesión</ion-button>
         </ion-row>
       </div>
         <ion-row>
-          <ion-label class="bot">No tienes cuenta? Regístrate aquí</ion-label>
+          <ion-label class="lab">No tienes cuenta? Regístrate aquí</ion-label>
         </ion-row>
       <div>
         <ion-row>
-          <ion-button class="but" shape="round" block color="primary" routerLink="/register">Registrarme</ion-button>
+          <ion-button class="but2" fill="outline" routerLink="/register">Registrarme</ion-button>
         </ion-row>
       </div>
     </div>
