--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -42,8 +42,16 @@
     div.bot{
         padding-top: 5%;
     }
-    ion-label.bot{
+    ion-label.lab{
         padding-top: 4.17%;
         padding-bottom: 4.17%;
+    }
+    ion-button.but1{
+        --background: #3689ff;
+        --box-shadow: 0 2px 6px 0 rgb(0, 0, 0, 0.25);
+    }
+    ion-button.but2{
+        --border-color: #3689ff;
+        --box-shadow: 0 2px 6px 0 rgb(0, 0, 0, 0.25);
     }
 }
