--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -40,7 +40,7 @@
   align-items: center;
   align-content: center;
   ion-button{
-      width: 100%;
+        width: 10rem;
       --background: #3689ff;
       --box-shadow: 0 2px 6px 0 rgb(0, 0, 0, 0.25);
   }
