--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -6,11 +6,11 @@
   <form [formGroup]="registerForm">
     <ion-item>
       <ion-label position="floating">Email</ion-label>
-      <ion-input required formControlName="email" type="text"></ion-input>
+      <ion-input required formControlName="email" type="text" (keyup.enter)="onRegister()"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Contraseña</ion-label>
-      <ion-input required formControlName="password" type="password"></ion-input>
+      <ion-input required formControlName="password" type="password" (keyup.enter)="onRegister()"></ion-input>
     </ion-item>
     <!-- <ion-item>
       <ion-label position="floating">Nombre de usuario</ion-label>
