Comentario ideae boton header

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,5 +1,11 @@
 <ion-header>
   <ion-toolbar>
+    <!-- 
+      Podria hacer un boton en el header para poder llegar siempre al home, sin tener que recargar la pag (para poder acceder desde la pwa)
+      <ion-row>
+        Meter el title aqui
+      <ion-button class="logout" (click)="onLogoff()">
+    </ion-row> -->
     <ion-title class="ion-text-center">Inicio de sesión</ion-title>
   </ion-toolbar>
 </ion-header>
