--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -10,7 +10,7 @@
     </ion-item>
     <ion-item>
       <ion-label position="floating">Contraseña</ion-label>
-      <ion-input required formControlName="password" type="password" (keyup.enter)="onRegister()"></ion-input>
+      <ion-input required formControlName="password" type="password" minlength="6" (keyup.enter)="onRegister()"></ion-input>
     </ion-item>
     <!-- <ion-item>
       <ion-label position="floating">Nombre de usuario</ion-label>
