Corregido color botones chat

--- a/src/app/pages/chat/chat.component.scss
+++ b/src/app/pages/chat/chat.component.scss
@@ -43,7 +43,11 @@ ion-input{
     border-radius: 5px;
     color: white;
 }
+ion-button{
+    --background: #3689ff;
+}
 ion-button.enviar{
+    --background: #3689ff;
     margin: 10px;
     margin-left: auto;
     border-radius: 5px;
