--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -14,12 +14,14 @@
     <!-- Antes, el slice estaba de 0 a slice, pero lo puse de slice a messages.length para que no me carguen todos los mensajes
         Vuelvo a ponerlo como antes porque si no hay suficientes mensajes no los carga
     -->
-    <ion-item *ngFor="let mesage of messages | slice: 0:messages.length" class="msg">
-      <ion-row>
-        <ion-text color="tertiary"><b>{{ mesage.user }}: &nbsp;</b></ion-text>
-        <ion-text color="secondary"> {{ mesage.text }}</ion-text>
-      </ion-row>
-    </ion-item>
+    <div class="flex">
+      <div *ngFor="let message of messages | slice: 0:messages.length" [ngClass]="message.user === user ? 'own' : 'other'">
+        <ion-row >
+          <ion-text><b>{{ message.user }}: &nbsp;</b></ion-text>
+          <ion-text> {{ message.text }}</ion-text>
+        </ion-row>
+        </div> 
+    </div>
   </ion-list>
 
   <!-- <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
