--- a/src/app/pages/chat/chat.component.scss
+++ b/src/app/pages/chat/chat.component.scss
@@ -54,11 +54,38 @@ ion-button.enviar{
     height: auto;
     transition: 0.3s;
 }
-
-// ion-item.msg{
-//     padding-left: 5px;
-//     padding-top: 5px
-// }
+.flex{
+    // display: flex;
+    // flex-direction: column;
+    // align-items: flex-end;
+    // align-content: flex-end;
+    .own{    
+        display: flex;
+        flex-direction: column;
+        background-color: white;
+        border-radius: 5px;
+        margin: 5px;
+        padding: 6px;
+        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+        color: #3d3d3d;
+        width: fit-content;
+        font-family: 'Open Sans', sans-serif;
+        font-weight: 500;
+        transition: 0.3s;
+    }
+    .other{
+        background-color: #3673cf;
+        border-radius: 5px;
+        margin: 5px;
+        padding: 6px;
+        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+        color: white;
+        width: fit-content;
+        font-family: 'Open Sans', sans-serif;
+        font-weight: 500;
+        transition: 0.3s;
+    }
+}
 
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,500;1,800&display=swap');
