--- a/src/app/pages/chat/chat.component.scss
+++ b/src/app/pages/chat/chat.component.scss
@@ -67,22 +67,18 @@ ion-button.enviar{
         margin: 5px;
         padding: 6px;
         box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
-        color: #3d3d3d;
+        color: #3689ff;
         width: fit-content;
-        font-family: 'Open Sans', sans-serif;
-        font-weight: 500;
         transition: 0.3s;
     }
     .other{
-        background-color: #3673cf;
+        background-color: #3689ff;
         border-radius: 5px;
         margin: 5px;
         padding: 6px;
         box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
         color: white;
         width: fit-content;
-        font-family: 'Open Sans', sans-serif;
-        font-weight: 500;
         transition: 0.3s;
     }
 }
