--- a/src/app/pages/chat/chat.component.scss
+++ b/src/app/pages/chat/chat.component.scss
@@ -54,24 +54,25 @@ ion-button.enviar{
     height: auto;
     transition: 0.3s;
 }
+
+.other{    
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    border-radius: 5px;
+    margin: 5px;
+    padding: 6px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+    color: #3689ff;
+    width: fit-content;
+    transition: 0.3s;
+}
 .flex{
-    // display: flex;
-    // flex-direction: column;
-    // align-items: flex-end;
-    // align-content: flex-end;
-    .own{    
-        display: flex;
-        flex-direction: column;
-        background-color: white;
-        border-radius: 5px;
-        margin: 5px;
-        padding: 6px;
-        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
-        color: #3689ff;
-        width: fit-content;
-        transition: 0.3s;
-    }
-    .other{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    align-content: flex-end;
+    .own{
         background-color: #3689ff;
         border-radius: 5px;
         margin: 5px;
