--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,14 +1,14 @@
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <ion-content class="ion-padding">
   <div class="flex">
     <div class="bot">
-            <ion-button class="but" routerLink="/login">Iniciar sesión</ion-button>
+      <ion-button class="but" routerLink="/login">Iniciar sesión</ion-button>
     </div>
-    <hr>
-      <ion-label class="bot">No estás registrado? Regístrate aquí</ion-label>
-    <hr>
+    <hr />
+    <ion-label class="bot">No estás registrado? Regístrate aquí</ion-label>
+    <hr />
     <div>
-        <ion-button class="but" routerLink="/register">Registrarse</ion-button>
+      <ion-button class="but" routerLink="/register">Registrarse</ion-button>
     </div>
   </div>
 </ion-content>
