--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,57 +1,21 @@
-// @media only screen and (min-width: 413) {
-    
-// div.bot{
-//   padding-inline-start: 43%;
-//   padding-top: 5px;
-// }
-// ion-label.bot{
-//   padding: 4.17%;
-//   padding-inline-start: 40%;
-//   text-align: center;
-//   -ms-text-size-adjust: auto;
-// }
-
-// ion-button.but{
-//   font-size: large;
-//   min-height: 5%;
-// }
-// }
-
-// div.bot{
-//   padding-top: 5%;
-// }
-// ion-label.bot{
-//    padding: 4.17%;
-//    padding-inline-start: 17%;
-//    text-align: center;
-//    font-size: 90%;
-// }
-// ion-button.but{
-//    font-size: large;
-//    min-height: 5%;
-//    min-width: 80%;
-//    padding-inline-start: 23%;
-//     }
-
-
-.flex{
+.flex {
   display: flex;
   flex-direction: column;
   align-items: center;
   align-content: center;
-  
-  ion-button{
-        width: 10rem;
-      --background: #3689ff;
-      --box-shadow: 0 2px 6px 0 rgb(0, 0, 0, 0.25);
+
+  ion-button {
+    width: 10rem;
+    --background: #3689ff;
+    --box-shadow: 0 2px 6px 0 rgb(0, 0, 0, 0.25);
   }
   padding-top: 17%;
 
-.but{
-  transition: all 0.3s ease;
-  transform: scale(1);
-}
-.but:hover {
-  transform: scale(1.2) perspective(1px)
-}
+  .but {
+    transition: all 0.3s ease;
+    transform: scale(1);
+  }
+  .but:hover {
+    transform: scale(1.2) perspective(1px);
+  }
 }
