Mensaje chat texto justificado

--- a/src/app/pages/chat/chat.component.scss
+++ b/src/app/pages/chat/chat.component.scss
@@ -68,5 +68,7 @@ ion-button.enviar {
     border-radius: 0.5rem;
   }
 }
-
+.hydrated{
+  text-align: justify;
+}
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,500;1,800&display=swap");
