Color error 404 cambiado

--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -25,7 +25,7 @@
       margin: 16px 0 12px;
     }
     #message h2 {
-      color: #ffa100;
+      color: #3689ff;
       font-weight: bold;
       font-size: 16px;
       margin: 0 0 8px;
