--- a/src/app/pages/chat/chat.component.scss
+++ b/src/app/pages/chat/chat.component.scss
@@ -45,7 +45,7 @@ img {
   display: flex;
   flex-direction: column;
   background-color: #dadae0;
-  margin: 0.5rem 0 0 0.4rem;
+  margin: 0.5rem 0.5rem 0.25rem 0.4rem;
   padding: 0.5rem;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
   color: #3689ff;
@@ -69,8 +69,8 @@ img {
   .own {
     background-color: #3689ff;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
-    margin: 0.5rem 0.4rem 0 0;
-    padding: 0.5rem;
+    margin: 0.5rem 0.4rem 0 0.5rem;
+    padding: 0.25rem;
     color: white;
     width: fit-content;
     transition: 0.3s;
